	* Added: Call hook core.ac.selected and fire change event on AC element selection
	* Added: TodoyuDateRange::getLabelWithTime()
	* Added: Initialize fake console element to prevent errors on console.log() in not supporting browsers
	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
	* Changed: Prevent selection of disabled select option
	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
	* Changed: Updates of date fields with the popup calendar will now trigger a change event
	* Changed: Used faster (int) instead of intval() for integer typecasting
	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
	* Changed: Minimum PHP version is 5.2.5
	* Changed: Renamed TodoyuDateRange::getDiff() to getDuration(), TodoyuDayRange::getDiffInDays() to getDurationInDays()
	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
	* Changed: Rich Text Editor (tinyMCE) uses now advanced mode with some additional edit features
	* Removed: scal calendar/date picker library
	* Removed: TodoyuString::replaceOnce()
	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method

core 2.1.4 - 2011-12-13
	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
	* Bugfix: Area was not set on popup AJAX requests
	* Changed: Only focus RTE when loaded over AJAX
	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
	* Changed: TodoyuString::html2text text handling improved