@@ -1,7 +1,5 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<div class="styledUpload">
-	<input type="file" name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" {$extraAttributes} />
-</div>
+<input type="file" name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" {$extraAttributes} />
 {/block}
